objects/Test_Execution__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents the execution of a test script in a specific case.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments on the test execution</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_Script__c</fullName>
        <formula>Test_Script_Description__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description of Script</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Cycle_Name__c</fullName>
        <label>Execution Cycle Name</label>
        <referenceTo>Test_Execution_Cycle__c</referenceTo>
        <relationshipName>Test_Executions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <description>Date of test execution</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Execution_Steps__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Execution Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Execution_Type__c</fullName>
        <description>Type of test execution</description>
        <label>Execution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Test</fullName>
                </value>
                <value>
                    <fullName>SIT</fullName>
                </value>
                <value>
                    <fullName>Regression Test</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request ID</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Test Script Executions</relationshipLabel>
        <relationshipName>Test_Script_Executions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <formula>Test_Script_Description__r.Request__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>Result of test execution</description>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Executor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Executor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Script_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Scenario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Scenario</label>
        <referenceTo>Test_Scenario__c</referenceTo>
        <relationshipLabel>Test Script Executions</relationshipLabel>
        <relationshipName>Test_Script_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Script_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Script ID</label>
        <referenceTo>Test_Script__c</referenceTo>
        <relationshipLabel>Test Script Executions</relationshipLabel>
        <relationshipName>Test_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Script Execution</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TestExecution-{0000000000}</displayFormat>
        <label>Test Execution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Script Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>